fix(css): fix gutter decoration alignments

--- a/styles/atom-git-diff-plus.less
+++ b/styles/atom-git-diff-plus.less
@@ -31,8 +31,14 @@ atom-text-editor {
     &.git-line-removed:before {
       bottom: -@size;
     }
+    &.git-line-removed:after {
+      width: calc(~"100% - 16px") !important;
+    }
     &.git-previous-line-removed:before {
       top: 0;
+    }
+    &.git-previous-line-removed:after {
+      width: calc(~"100% - 16px") !important;
     }
   }
 
@@ -45,7 +51,7 @@ atom-text-editor {
       content: "";
       display: inline-block;
       position: absolute;
-      top: 0.2em;
+      top: 0.15em;
       left: 0.4em;
       height: 0px;
       width: 1em;
@@ -69,7 +75,7 @@ atom-text-editor {
       color: @syntax-color-removed;
     }
     &.git-line-removed:before {
-      top: 1em;
+      top: 1.5em;
     }
     &.git-previous-line-removed:before {
       top: 0;
